--- a/src/styles.css
+++ b/src/styles.css
@@ -1,60 +1,66 @@
 * {
-    padding: 0;
-    margin: 0;
-    font-family: Cambria;
-    box-sizing: border-box;
-    color: #444;
+  padding: 0;
+  margin: 0;
+  font-family: Cambria;
+  box-sizing: border-box;
+  color: #444;
 }
 
 a {
-    text-decoration: none;
-    color: #444;
-    transition: .4s;
+  text-decoration: none;
+  color: #444;
+  transition: 0.4s;
 }
 
 a:hover {
-    color: #dec129;
+  color: #dec129;
 }
 
-/* FORM */ 
+/* FORM */
 
 form {
-    width: 450px;
-    margin: 0 auto;
+  width: 450px;
+  margin: 0 auto;
 }
 
 .form-group {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 1em;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1em;
 }
 
 .form-group label {
-    font-weight: bold;
-    font-size: .9em;
-    margin-bottom: .4em;
+  font-weight: bold;
+  font-size: 0.9em;
+  margin-bottom: 0.4em;
 }
 
 .form-group input,
 .form-group textarea {
-    padding: .6em;
-    color: #777;
-    font-size: .8em;
+  padding: 0.6em;
+  color: #777;
+  font-size: 0.8em;
 }
 
 input[type="submit"] {
-    background-color: #efefef;
-    border: 2px solid transparent;
-    padding: .6em 1em;
-    font-weight: bold;
-    font-size: 1.1em;
-    cursor: pointer;
-    transition: 0.4s;
+  background-color: #efefef;
+  border: 2px solid transparent;
+  padding: 0.6em 1em;
+  font-weight: bold;
+  font-size: 1.1em;
+  cursor: pointer;
+  transition: 0.4s;
 }
 
 input[type="submit"]:hover {
-    color: #dec129;
-    border-color: #dec129;
-    background-color: transparent;
+  color: #dec129;
+  border-color: #dec129;
+  background-color: transparent;
 }
 
+.validation-error p {
+  color: #dc3545;
+  margin-top: 0.4em;
+  border-left: 3px solid #dc3545;
+  padding-left: 0.2em;
+}
